--- a/less/home-page.less
+++ b/less/home-page.less
@@ -110,5 +110,9 @@
         .button-creator(200px, 45px, @button-bg, @white, 1.8rem);     
       }
     }
+
+    .destination-background {
+      background-color: lightgoldenrodyellow;
+    }
   }
 }// home
