--- a/less/navigation.less
+++ b/less/navigation.less
@@ -23,6 +23,10 @@
       }
     }
 
+    .logo-heading-big {
+      font-size: 5rem;
+    }
+
     .nav {
       width: 350px;
       display: flex;
@@ -37,6 +41,12 @@
       a {
         font-size: 1.6rem;
         color: @font-color;
+        text-decoration: none;
+      }
+
+      .a-hover {
+        font-size: 1.8rem;
+        color: lighten(@font-color, 40%);
         text-decoration: none;
       }
     }
