--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,6 +12,12 @@
     h2 {
       margin-top: 20px;
     }
+
+    .fun {
+      font-family: "comic-sans";
+      font-size: 50px;
+      color: goldenrod;
+    }
   }
 
   .content-section {
