--- a/css/index.css
+++ b/css/index.css
@@ -237,6 +237,11 @@ img {
 .home .intro h2 {
   margin-top: 20px;
 }
+.home .intro .fun {
+  font-family: "comic-sans";
+  font-size: 50px;
+  color: goldenrod;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
