--- a/less/home-page.less
+++ b/less/home-page.less
@@ -115,6 +115,12 @@
       .btn {
         .button-creator(200px, 45px, @button-bg, @white, 1.8rem);     
       }
+
+      
+    }
+
+    .destination-color {
+      color: dodgerblue;
     }
   }
 }// home
